--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mhwp/webpack-config",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Webpack config for Tatabanya WP theme",
   "main": "index.js",
   "scripts": {},
@@ -31,6 +31,7 @@
     "@wordpress/eslint-plugin": "^13.9.0",
     "@wordpress/stylelint-config": "^21.8.0",
     "autoprefixer": "^10.4.13",
+    "babel-loader": "^9.1.2",
     "cac": "^6.7.14",
     "chalk": "^4.1.2",
     "css-loader": "^6.7.3",
@@ -61,8 +62,5 @@
     "webpack-dev-server": "^4.11.1",
     "webpack-manifest-plugin": "^5.0.0",
     "webpack-merge": "^5.8.0"
-  },
-  "devDependencies": {
-    "babel-loader": "^9.1.2"
   }
 }
